tests/baselines/reference/tsxAttributeResolution9.errors.txt
file.tsx(5,3): error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.
file.tsx(9,14): error TS2322: Type 'number' is not assignable to type 'string'.
react.d.ts(6,3): error TS7008: Member 'props' implicitly has an 'any' type.


==== react.d.ts (1 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	}
    	interface ElementAttributesProperty {
    		props;
    		~~~~~
!!! error TS7008: Member 'props' implicitly has an 'any' type.
    	}
    }
    
    interface Props {  
      foo: string;
    }
    
==== file.tsx (2 errors) ====
    export class MyComponent {  
      render() {
      }
    
      props: { foo: string; }
      ~~~~~
!!! error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.
    }
    
    <MyComponent foo="bar" />; // ok  
    <MyComponent foo={0} />; // should be an error
                 ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 file.tsx:5:12: The expected type comes from property 'foo' which is declared here on type '{ foo: string; }'
    